--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11111,5 +11111,53 @@ blockquote .quote {
   right: 4%;
   bottom: 25%;
 }
+.table-responsive {
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  max-width: 100%;
+  margin: 15px 0;
+}
+.table-responsive table {
+  width: 100%;
+  min-width: 650px;
+  border-collapse: separate;
+  border-spacing: 0 15px;
+  margin: 0 auto;
+}
+@media (max-width: 991px) {
+  .table-responsive table {
+    width: 100%;
+    min-width: 200px;
+    border-collapse: separate;
+    border-spacing: 0 15px;
+    margin: 0 auto;
+  }
+}
+.table-responsive table thead tr th {
+  background: linear-gradient(45deg, #62ffa9, #62ffb6);
+  color: white;
+  padding: 12px;
+  font-size: 16px;
+  white-space: nowrap;
+  color: #000;
+}
+.table-responsive table thead tr th:first-child {
+  border-radius: 10px 0 0 10px;
+}
+.table-responsive table thead tr th:last-child {
+  border-radius: 0 10px 10px 0;
+}
+.table-responsive table tbody tr td {
+  background: rgba(8, 100, 185, 0.849);
+  padding: 12px;
+  color: #fff;
+  font-size: 14px;
+}
+.table-responsive table tbody tr td:first-child {
+  border-radius: 10px 0 0 10px;
+}
+.table-responsive table tbody tr td:last-child {
+  border-radius: 0 10px 10px 0;
+}
 
 /*# sourceMappingURL=main.css.map */
