--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5100,9 +5100,37 @@ body[data-aos-easing="ease"] [data-aos] {
 }
 .about .about-img img {
   position: absolute;
-  right: -14%;
-  top: -113px;
+  right: 15%;
+  top: 250px;
   z-index: -1;
+}
+.about .about-img .ab-img2 {
+  position: absolute;
+  right: 7%;
+  top: 250px;
+  z-index: -1;
+}
+.token_chart_1 {
+  background-color: white;
+  border-radius: 20px;
+  padding: 30px;
+  position: relative;
+  height: 300px;
+  z-index: 1;
+  color: #080b18;
+  font-weight: bold;
+  font-size: 20px;
+}
+.token_chart_1 table tr td {
+  padding: 14px 18px;
+  font-weight: bold;
+  color: #000000;
+  border-radius: 10px 0 0 10px;
+  border: 2px solid #2dd98f;
+}
+.token_chart_1 table tr {
+  background: rgba(255, 255, 255, 0.75);
+  border-radius: 10px;
 }
 @media (max-width: 911px) {
   .about .about-img img {
@@ -11172,3 +11200,203 @@ blockquote .quote {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+/*  31. Team section css */
+.team-section-1 {
+  padding: 100px 0;
+}
+.heading-title {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.heading-title p {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  line-height: 1;
+  color: #14fd90;
+}
+.heading-title h1 {
+  font-size: 48px;
+  font-weight: 600;
+  text-align: center;
+  line-height: 38px;
+  color: #ffffff;
+  display: block;
+}
+.team-card {
+  text-align: center;
+  display: block;
+}
+.team-card .image-fram {
+  width: 100%;
+  padding-bottom: 100%;
+  position: relative;
+}
+.image-fram:before {
+  content: "";
+  background-image: radial-gradient(#121820 15%, transparent 0);
+  background-size: 20px 20px;
+  width: 120px;
+  height: 40px;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  z-index: 1;
+  opacity: 0;
+  -webkit-transform: translateX(-30px);
+  transform: translateX(-30px);
+  -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+}
+.image-fram::after {
+  content: "";
+  background-image: radial-gradient(#121820 15%, transparent 0);
+  background-size: 20px 20px;
+  width: 60px;
+  height: 120px;
+  position: absolute;
+  bottom: 0;
+  left: 30px;
+  z-index: 1;
+  opacity: 0;
+  -webkit-transform: translateY(-30px);
+  transform: translateY(-30px);
+  -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+}
+.image-fram a {
+  text-decoration: none;
+  cursor: auto;
+}
+.image-fram img {
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+  filter: grayscale(100%);
+  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+}
+.team-card:hover .image-fram img {
+  filter: grayscale(0%);
+  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+}
+.image-fram .mil-team-circle {
+  position: absolute;
+  background-color: #2dd98f;
+  opacity: 0;
+  width: 120px;
+  height: 120px;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  border-radius: 50%;
+  bottom: 0;
+  right: 0;
+  -webkit-transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+}
+.team-card:hover .image-fram .mil-team-circle {
+  transform: scale(1);
+  opacity: 1;
+}
+.team-card:hover .image-fram::after {
+  transform: scale(1);
+  opacity: 1;
+}
+.team-card:hover .image-fram::before {
+  transform: scale(1);
+  opacity: 1;
+}
+.team-detail {
+  text-align: center;
+  margin-top: 20px;
+}
+.team-detail a {
+  font-size: 24px;
+  font-weight: 600;
+  text-transform: capitalize;
+  display: block;
+  color: #ffffff;
+  transition: all 0.35s ease-in;
+}
+.team-detail a:hover {
+  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+  color: #2dd98f;
+}
+.team-detail span {
+  font-size: 16px;
+  font-weight: 400;
+  color: #f3f2f2;
+}
+.social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 20px;
+}
+.social a {
+  text-decoration: none;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  font-size: 18px;
+  background-color: #2dd98f;
+}
+.social a:hover {
+  background-color: #fff;
+  color: #f57c00;
+  transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transform: translateY(-10px);
+}
+
+@media (min-width: 992px) and (max-width: 1140px) {
+  .team-section-1 {
+    padding: 80px 0;
+  }
+  .heading-title h1 {
+    font-size: 36px;
+  }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+  .team-section-1 {
+    padding: 60px 0;
+  }
+  .heading-title h1 {
+    font-size: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+  .team-section-1 {
+    padding: 30px 0;
+  }
+  .heading-title h1 {
+    font-size: 30px;
+    line-height: 32px;
+  }
+  .heading-title {
+    margin-bottom: 30px;
+  }
+  .team-detail a {
+    font-size: 20px;
+  }
+  .social {
+    margin-top: 10px;
+  }
+  .team-detail {
+    margin-top: 10px;
+  }
+}
